--- a/opensource/colpali/scripts/configs/qwen2_5/train_colqwen2_5_docmatrix_model.yaml
+++ b/opensource/colpali/scripts/configs/qwen2_5/train_colqwen2_5_docmatrix_model.yaml
@@ -4,13 +4,13 @@ config:
   processor:
     (): colpali_engine.utils.transformers_wrappers.AllPurposeWrapper
     class_to_instanciate: !ext colpali_engine.models.ColQwen2_5_Processor
-    pretrained_model_name_or_path:  "/home/totuanan/Workplace/eventa_lastsong/opensource/colpali/models/colqwen2.5-base"
+    pretrained_model_name_or_path:  "vidore/colqwen2.5-base"
     max_num_visual_tokens: 1024
 
   model:
     (): colpali_engine.utils.transformers_wrappers.AllPurposeWrapper
     class_to_instanciate: !ext colpali_engine.models.ColQwen2_5
-    pretrained_model_name_or_path: "/home/totuanan/Workplace/eventa_lastsong/opensource/colpali/models/colqwen2.5-base"
+    pretrained_model_name_or_path: "vidore/colqwen2.5-base"
     torch_dtype:  !ext torch.bfloat16
     use_cache: false
 #    attn_implementation: "flash_attention_2"
@@ -24,25 +24,26 @@ config:
     (): colpali_engine.loss.late_interaction_losses.ColbertPairwiseCELoss
   tr_args:
     (): transformers.training_args.TrainingArguments
-    output_dir: null
+    output_dir: "/home/totuanan/Workplace/eventa_lastsong/opensource/colpali/checkpoints"
     overwrite_output_dir: true
     num_train_epochs: 5
-    use_cpu: true
-    per_device_train_batch_size: 1
+#    use_cpu: true
+    per_device_train_batch_size: 4
     gradient_checkpointing: true
     gradient_checkpointing_kwargs: { "use_reentrant": false }
     # 6 x 8 gpus = 48 batch size
-    # gradient_accumulation_steps: 4
-    per_device_eval_batch_size: 1
+#    gradient_accumulation_steps: 4
+    per_device_eval_batch_size: 4
     eval_strategy: "steps"
     dataloader_num_workers: 8
     # bf16: true
-    save_steps: 500
-    logging_steps: 1
-    eval_steps: 100
+    save_strategy: "steps"
+    save_steps: 10000
+    logging_steps: 100
+    eval_steps: 10000
     warmup_steps: 100
     learning_rate: 2e-4
-    save_total_limit: 1
+    save_total_limit: 3
     # resume_from_checkpoint: true
     # optim: "paged_adamw_8bit"
     # wandb logging
